src/test/deca/syntax/invalid/resultats/test36_class_decl-synt.res
./src/test/deca/syntax/invalid/test36_class_decl.deca:15:6: extraneous input 'extends' expecting IDENT
